# Core

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
Include/Core/: Definitions.hpp
Include/Core/Math/: Constants.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Source/Math/: Utils.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
